--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,11 +1,12 @@
 NEXT_PUBLIC_API_HOST=localhost
 NEXT_PUBLIC_API_PROTOCOL=http
+NEXT_PUBLIC_NETWORK_LOGO=https://explorer.3achain.org/images/3Achain_Logo-620f8cda3f15530921273c9cc29564a3.svg?vsn=d
 NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
-NEXT_PUBLIC_NETWORK_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_SHORT_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_ID=5
-NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Ether
-NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=ETH
+NEXT_PUBLIC_NETWORK_NAME=3Achain
+NEXT_PUBLIC_NETWORK_SHORT_NAME=3Achain
+NEXT_PUBLIC_NETWORK_ID=222
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=LVGA
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=3Acoin
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
 NEXT_PUBLIC_API_BASE_PATH=/
 NEXT_PUBLIC_APP_HOST=localhost
@@ -15,3 +16,6 @@ NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
 NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+BLOCK_TRANSFORMER=clique
+NEXT_PUBLIC_NETWORK_RPC_URL=https://testnet-3achain-rpc.noku.io
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=aaa
