--- a/docker-compose/envs/common-smart-contract-verifier.env
+++ b/docker-compose/envs/common-smart-contract-verifier.env
@@ -26,10 +26,11 @@ SMART_CONTRACT_VERIFIER__VYPER__REFRESH_VERSIONS_SCHEDULE=0 0 * * * * *
 SMART_CONTRACT_VERIFIER__VYPER__FETCHER__LIST__LIST_URL=https://raw.githubusercontent.com/blockscout/solc-bin/main/vyper.list.json
 #SMART_CONTRACT_VERIFIER__VYPER__FETCHER__LIST__LIST_URL=https://raw.githubusercontent.com/blockscout/solc-bin/main/vyper.macos.list.json
 
-SMART_CONTRACT_VERIFIER__SOURCIFY__ENABLED=true
+# Sourcify is ded
+SMART_CONTRACT_VERIFIER__SOURCIFY__ENABLED=false
 SMART_CONTRACT_VERIFIER__SOURCIFY__API_URL=https://sourcify.dev/server/
 SMART_CONTRACT_VERIFIER__SOURCIFY__VERIFICATION_ATTEMPTS=3
-SMART_CONTRACT_VERIFIER__SOURCIFY__REQUEST_TIMEOUT=10
+SMART_CONTRACT_VERIFIER__SOURCIFY__REQUEST_TIMEOUT=10000
 
 SMART_CONTRACT_VERIFIER__METRICS__ENABLED=false
 SMART_CONTRACT_VERIFIER__METRICS__ADDR=0.0.0.0:6060
