--- a/docker-compose/envs/common-stats.env
+++ b/docker-compose/envs/common-stats.env
@@ -1,7 +1,7 @@
 # Those are examples of existing configuration variables and their default values.
 # When uncommented, they would overwrite corresponding values from `base.toml`
 # configuration file.
-
+BLOCK_TRANSFORMER=clique
 STATS__SERVER__HTTP__ENABLED=true
 STATS__SERVER__HTTP__ADDR=0.0.0.0:8050
 STATS__SERVER__HTTP__MAX_BODY_SIZE=2097152
