--- a/docker/Makefile
+++ b/docker/Makefile
@@ -10,11 +10,13 @@ STATS_CONTAINER_NAME := stats
 STATS_DB_CONTAINER_NAME := stats-db
 PROXY_CONTAINER_NAME := proxy
 PG_CONTAINER_NAME := postgres
-RELEASE_VERSION ?= '6.3.0'
+RELEASE_VERSION ?= '6.2.0'
 TAG := $(RELEASE_VERSION)-commit-$(shell git log -1 --pretty=format:"%h")
 STABLE_TAG := $(RELEASE_VERSION)
 
 start:
+	@echo "==> Starting smart contract verifier"
+	@docker-compose -f ../docker-compose/services/smart-contract-verifier.yml up -d
 	@echo "==> Starting blockscout db"
 	@docker-compose -f ../docker-compose/services/db.yml up -d
 	@echo "==> Starting blockscout backend"
