--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,16 +1,18 @@
+MICROSERVICE_SC_VERIFIER_ENABLED=true
+BLOCK_TRANSFORMER=clique
 ETHEREUM_JSONRPC_VARIANT=geth
-ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545/
+ETHEREUM_JSONRPC_HTTP_URL=https://testnet-3achain-rpc.noku.io
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 # DATABASE_QUEUE_TARGET
-ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
+ETHEREUM_JSONRPC_TRACE_URL=https://testnet-3achain-rpc.noku.io
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
-# ETHEREUM_JSONRPC_FALLBACK_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_HTTP_TIMEOUT=
 # CHAIN_TYPE=
-NETWORK=
-SUBNETWORK=Awesome chain
+CHAIN_ID=222
+NETWORK=3AChain
+SUBNETWORK=
 LOGO=/images/blockscout_logo.svg
 # ETHEREUM_JSONRPC_WS_URL=
 ETHEREUM_JSONRPC_TRANSPORT=http
@@ -41,12 +43,9 @@ EXCHANGE_RATES_COIN=
 # EXCHANGE_RATES_TVL_SOURCE=
 # EXCHANGE_RATES_PRICE_SOURCE=
 # EXCHANGE_RATES_COINGECKO_COIN_ID=
-# EXCHANGE_RATES_COINGECKO_SECONDARY_COIN_ID=
 # EXCHANGE_RATES_COINGECKO_API_KEY=
 # EXCHANGE_RATES_COINMARKETCAP_API_KEY=
 # EXCHANGE_RATES_COINMARKETCAP_COIN_ID=
-# EXCHANGE_RATES_COINMARKETCAP_SECONDARY_COIN_ID=
-# EXCHANGE_RATES_CRYPTOCOMPARE_SECONDARY_COIN_SYMBOL=
 POOL_SIZE=80
 # EXCHANGE_RATES_COINGECKO_PLATFORM_ID=
 # TOKEN_EXCHANGE_RATE_INTERVAL=
@@ -94,11 +93,9 @@ CACHE_MARKET_HISTORY_PERIOD=21600
 CACHE_ADDRESS_TRANSACTIONS_COUNTER_PERIOD=1800
 CACHE_ADDRESS_TOKENS_USD_SUM_PERIOD=3600
 CACHE_ADDRESS_TOKEN_TRANSFERS_COUNTER_PERIOD=1800
-# CACHE_TRANSACTIONS_24H_STATS_PERIOD=
-# CACHE_FRESH_PENDING_TRANSACTIONS_COUNTER_PERIOD=
 TOKEN_METADATA_UPDATE_INTERVAL=172800
-CONTRACT_VERIFICATION_ALLOWED_SOLIDITY_EVM_VERSIONS=homestead,tangerineWhistle,spuriousDragon,byzantium,constantinople,petersburg,istanbul,berlin,london,paris,shanghai,cancun,default
-CONTRACT_VERIFICATION_ALLOWED_VYPER_EVM_VERSIONS=byzantium,constantinople,petersburg,istanbul,berlin,paris,shanghai,cancun,default
+CONTRACT_VERIFICATION_ALLOWED_SOLIDITY_EVM_VERSIONS=homestead,tangerineWhistle,spuriousDragon,byzantium,constantinople,petersburg,istanbul,berlin,london,paris,shanghai,default
+CONTRACT_VERIFICATION_ALLOWED_VYPER_EVM_VERSIONS=byzantium,constantinople,petersburg,istanbul,berlin,paris,shanghai,default
 # CONTRACT_VERIFICATION_MAX_LIBRARIES=10
 CONTRACT_MAX_STRING_LENGTH_WITHOUT_TRIMMING=2040
 # CONTRACT_DISABLE_INTERACTION=
@@ -140,7 +137,6 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_EMPTY_BLOCKS_SANITIZER_INTERVAL=
 # INDEXER_INTERNAL_TRANSACTIONS_BATCH_SIZE=
 # INDEXER_INTERNAL_TRANSACTIONS_CONCURRENCY=
-# ETHEREUM_JSONRPC_DEBUG_TRACE_TRANSACTION_TIMEOUT=
 # INDEXER_BLOCK_REWARD_BATCH_SIZE=
 # INDEXER_BLOCK_REWARD_CONCURRENCY=
 # INDEXER_TOKEN_INSTANCE_USE_BASE_URI_RETRY=
@@ -195,31 +191,11 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_POLYGON_ZKEVM_L1_BRIDGE_NATIVE_DECIMALS=
 # INDEXER_POLYGON_ZKEVM_L2_BRIDGE_START_BLOCK=
 # INDEXER_POLYGON_ZKEVM_L2_BRIDGE_CONTRACT=
-# INDEXER_ZKSYNC_BATCHES_ENABLED=
-# INDEXER_ZKSYNC_BATCHES_CHUNK_SIZE=
-# INDEXER_ZKSYNC_NEW_BATCHES_MAX_RANGE=
-# INDEXER_ZKSYNC_NEW_BATCHES_RECHECK_INTERVAL=
-# INDEXER_ZKSYNC_L1_RPC=
-# INDEXER_ZKSYNC_BATCHES_STATUS_RECHECK_INTERVAL=
 # INDEXER_REALTIME_FETCHER_MAX_GAP=
 # INDEXER_FETCHER_INIT_QUERY_LIMIT=
 # INDEXER_TOKEN_BALANCES_FETCHER_INIT_QUERY_LIMIT=
 # INDEXER_COIN_BALANCES_FETCHER_INIT_QUERY_LIMIT=
 # WITHDRAWALS_FIRST_BLOCK=
-# INDEXER_OPTIMISM_L1_RPC=
-# INDEXER_OPTIMISM_L1_BATCH_START_BLOCK=
-# INDEXER_OPTIMISM_L1_BATCH_INBOX=
-# INDEXER_OPTIMISM_L1_BATCH_SUBMITTER=
-# INDEXER_OPTIMISM_L1_BATCH_BLOCKS_CHUNK_SIZE=
-# INDEXER_OPTIMISM_L2_BATCH_GENESIS_BLOCK_NUMBER=
-# INDEXER_OPTIMISM_L1_PORTAL_CONTRACT=
-# INDEXER_OPTIMISM_L1_OUTPUT_ROOTS_START_BLOCK=
-# INDEXER_OPTIMISM_L1_OUTPUT_ORACLE_CONTRACT=
-# INDEXER_OPTIMISM_L1_WITHDRAWALS_START_BLOCK=
-# INDEXER_OPTIMISM_L2_WITHDRAWALS_START_BLOCK=
-# INDEXER_OPTIMISM_L2_MESSAGE_PASSER_CONTRACT=
-# INDEXER_OPTIMISM_L1_DEPOSITS_START_BLOCK=
-# INDEXER_OPTIMISM_L1_DEPOSITS_BATCH_SIZE=
 # ROOTSTOCK_REMASC_ADDRESS=
 # ROOTSTOCK_BRIDGE_ADDRESS=
 # ROOTSTOCK_LOCKED_BTC_CACHE_PERIOD=
@@ -262,9 +238,6 @@ EXTERNAL_APPS=[]
 # GAS_PRICE_ORACLE_SAFELOW_PERCENTILE=
 # GAS_PRICE_ORACLE_AVERAGE_PERCENTILE=
 # GAS_PRICE_ORACLE_FAST_PERCENTILE=
-# GAS_PRICE_ORACLE_SAFELOW_TIME_COEFFICIENT=
-# GAS_PRICE_ORACLE_AVERAGE_TIME_COEFFICIENT=
-# GAS_PRICE_ORACLE_FAST_TIME_COEFFICIENT=
 # RESTRICTED_LIST=
 # RESTRICTED_LIST_KEY=
 SHOW_MAINTENANCE_ALERT=false
@@ -283,10 +256,8 @@ JSON_RPC=
 # API_RATE_LIMIT_IS_BLOCKSCOUT_BEHIND_PROXY=false
 API_RATE_LIMIT_UI_V2_TOKEN_TTL_IN_SECONDS=18000
 FETCH_REWARDS_WAY=trace_block
-MICROSERVICE_SC_VERIFIER_ENABLED=true
-# MICROSERVICE_SC_VERIFIER_URL=http://smart-contract-verifier:8050/
-# MICROSERVICE_SC_VERIFIER_TYPE=sc_verifier
-MICROSERVICE_SC_VERIFIER_URL=https://eth-bytecode-db.services.blockscout.com/
+MICROSERVICE_SC_VERIFIER_URL=http://smart-contract-verifier:8050/
+#MICROSERVICE_SC_VERIFIER_TYPE=sc_verifier
 MICROSERVICE_SC_VERIFIER_TYPE=eth_bytecode_db
 MICROSERVICE_ETH_BYTECODE_DB_INTERVAL_BETWEEN_LOOKUPS=10m
 MICROSERVICE_ETH_BYTECODE_DB_MAX_LOOKUPS_CONCURRENCY=10
@@ -325,10 +296,6 @@ EIP_1559_ELASTICITY_MULTIPLIER=2
 # ADDRESSES_TABS_COUNTERS_TTL=10m
 # DENORMALIZATION_MIGRATION_BATCH_SIZE=
 # DENORMALIZATION_MIGRATION_CONCURRENCY=
-# TOKEN_TRANSFER_TOKEN_TYPE_MIGRATION_BATCH_SIZE=
-# TOKEN_TRANSFER_TOKEN_TYPE_MIGRATION_CONCURRENCY=
-# SANITIZE_INCORRECT_NFT_BATCH_SIZE=
-# SANITIZE_INCORRECT_NFT_CONCURRENCY=
 SOURCIFY_INTEGRATION_ENABLED=false
 SOURCIFY_SERVER_URL=
 SOURCIFY_REPO_URL=
