--- a/docker-compose/services/frontend-testchain.yml
+++ b/docker-compose/services/frontend-testchain.yml
@@ -6,6 +6,6 @@ services:
     pull_policy: always
     platform: linux/amd64
     restart: always
-    container_name: 'frontend'
+    container_name: 'frontend-testchain'
     env_file:
       -  ../envs/common-frontend.env
