--- a/docker-compose/services/nginx-testchain.yml
+++ b/docker-compose/services/nginx-testchain.yml
@@ -3,14 +3,14 @@ version: '3.9'
 services:
   proxy:
     image: nginx
-    container_name: proxy
+    container_name: proxy-testchain
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     volumes:
       - "../proxy:/etc/nginx/templates"
     environment:
-      BACK_PROXY_PASS: ${BACK_PROXY_PASS:-http://backend:4000}
-      FRONT_PROXY_PASS: ${FRONT_PROXY_PASS:-http://frontend:3000}
+      BACK_PROXY_PASS: ${BACK_PROXY_PASS:-http://backend-testchain:4000}
+      FRONT_PROXY_PASS: ${FRONT_PROXY_PASS:-http://frontend-testchain:3000}
     ports:
       - target: 80
         published: 80
