--- a/docker-compose/services/redis-testchain.yml
+++ b/docker-compose/services/redis-testchain.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   redis-db:
     image: 'redis:alpine'
-    container_name: redis-db
+    container_name: redis-db-testchain
     command: redis-server
     volumes:
       - ./redis-data:/data
