--- a/docker-compose/proxy/default.conf.template
+++ b/docker-compose/proxy/default.conf.template
@@ -6,7 +6,7 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen       80;
-    server_name  explorertest.3achain.org;
+    server_name  localhost;
     proxy_http_version 1.1;
 
     location ~ ^/(api|socket|sitemap.xml|auth/auth0|auth/auth0/callback|auth/logout) {
@@ -34,11 +34,11 @@ server {
 }
 server {
     listen       8080;
-    server_name  explorertest.3achain.org;
+    server_name  localhost;
     proxy_http_version 1.1;
     proxy_hide_header Access-Control-Allow-Origin;
     proxy_hide_header Access-Control-Allow-Methods;
-    add_header 'Access-Control-Allow-Origin' 'http://explorertest.3achain.org' always;
+    add_header 'Access-Control-Allow-Origin' 'http://localhost' always;
     add_header 'Access-Control-Allow-Credentials' 'true' always;
     add_header 'Access-Control-Allow-Methods' 'PUT, GET, POST, OPTIONS, DELETE, PATCH' always;
 
@@ -56,11 +56,11 @@ server {
 }
 server {
     listen       8081;
-    server_name  explorertest.3achain.org;
+    server_name  localhost;
     proxy_http_version 1.1;
     proxy_hide_header Access-Control-Allow-Origin;
     proxy_hide_header Access-Control-Allow-Methods;
-    add_header 'Access-Control-Allow-Origin' 'http://explorertest.3achain.org' always;
+    add_header 'Access-Control-Allow-Origin' 'http://localhost' always;
     add_header 'Access-Control-Allow-Credentials' 'true' always;
     add_header 'Access-Control-Allow-Methods' 'PUT, GET, POST, OPTIONS, DELETE, PATCH' always;
     add_header 'Access-Control-Allow-Headers' 'DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,x-csrf-token' always;
