--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -2,6 +2,7 @@ MICROSERVICE_SC_VERIFIER_ENABLED=true
 BLOCK_TRANSFORMER=clique
 ETHEREUM_JSONRPC_VARIANT=geth
 PORT=4000
+BLOCKSCOUT_RETRIEVE_PORT=4020
 BLOCKSCOUT_RETRIEVE_PORT=4000
 ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545/
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
@@ -25,7 +26,7 @@ ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
 # ETHEREUM_JSONRPC_GETH_TRACE_BY_BLOCK=
 IPC_PATH=
 NETWORK_PATH=/
-BLOCKSCOUT_HOST=explorertest.3achain.org
+BLOCKSCOUT_HOST=n
 BLOCKSCOUT_PROTOCOL=https
 RE_CAPTCHA_SECRET_KEY=6LcHu9QgAAAAAGQwITxqVtN6B69FlFIng96CNYA6
 RE_CAPTCHA_CLIENT_KEY=6LcHu9QgAAAAAI-y0ngxhW9MzmD3k79cU2nT6Red
@@ -315,3 +316,4 @@ TENDERLY_CHAIN_PATH=
 # BRIDGED_TOKENS_POA_OMNI_BRIDGE_MEDIATOR=
 # BRIDGED_TOKENS_AMB_BRIDGE_MEDIATORS
 # BRIDGED_TOKENS_FOREIGN_JSON_RPC
+
