--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -26,7 +26,7 @@ ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
 # ETHEREUM_JSONRPC_GETH_TRACE_BY_BLOCK=
 IPC_PATH=
 NETWORK_PATH=/
-BLOCKSCOUT_HOST=https://explorertest.3achain.org/
+BLOCKSCOUT_HOST=explorertest.3achain.org
 BLOCKSCOUT_PROTOCOL=https
 RE_CAPTCHA_SECRET_KEY=6LcHu9QgAAAAAGQwITxqVtN6B69FlFIng96CNYA6
 RE_CAPTCHA_CLIENT_KEY=6LcHu9QgAAAAAI-y0ngxhW9MzmD3k79cU2nT6Red
