--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -9,8 +9,8 @@ NEXT_PUBLIC_NETWORK_CURRENCY_NAME=LVGA
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=3Acoin
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
 NEXT_PUBLIC_API_BASE_PATH=/
-NEXT_PUBLIC_APP_HOST=localhost
-NEXT_PUBLIC_APP_PROTOCOL=http
+NEXT_PUBLIC_APP_HOST=explorertest.3achain.org
+NEXT_PUBLIC_APP_PROTOCOL=https
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
 NEXT_PUBLIC_VISUALIZE_API_HOST=https://explorertest.3achain.org:8081
 NEXT_PUBLIC_IS_TESTNET=true
