--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_API_HOST=explorertest.3achain.org
+NEXT_PUBLIC_APP_HOST_PORT=9352
 NEXT_PUBLIC_API_BASE_PATH=/
 NEXT_PUBLIC_NETWORK_LOGO=https://explorer.3achain.org/images/3Achain_Logo-620f8cda3f15530921273c9cc29564a3.svg?vsn=d
 NEXT_PUBLIC_STATS_API_HOST=http://localhost:8085
