--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -18,3 +18,5 @@ NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout
 BLOCK_TRANSFORMER=clique
 NEXT_PUBLIC_NETWORK_RPC_URL=https://testnet-3achain-rpc.noku.io
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=aaa
+NEXT_PUBLIC_APP_ENV=development
+
