--- a/docker-compose/services/backend-testchain.yml
+++ b/docker-compose/services/backend-testchain.yml
@@ -12,5 +12,8 @@ services:
       - 'host.docker.internal:host-gateway'
     env_file:
       -  ../envs/common-blockscout.env
+    environment:
+      ETHEREUM_JSONRPC_VARIANT: 'geth'
+      BLOCK_TRANSFORMER: 'clique'
     volumes:
       - ./logs/:/app/logs/
