--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -17,4 +17,4 @@ NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout
 BLOCK_TRANSFORMER=clique
 NEXT_PUBLIC_NETWORK_RPC_URL=http://172.31.1.103:8545
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=aaa
-
+NEXT_PUBLIC_RE_CAPTCHA_APP_SITE_KEY=6LcHu9QgAAAAAGQwITxqVtN6B69FlFIng96CNYA6
