--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -18,3 +18,6 @@ BLOCK_TRANSFORMER=clique
 NEXT_PUBLIC_NETWORK_RPC_URL=http://172.31.1.103:8545
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=aaa
 NEXT_PUBLIC_RE_CAPTCHA_APP_SITE_KEY=6LcHu9QgAAAAAGQwITxqVtN6B69FlFIng96CNYA6
+NEXT_PUBLIC_AD_BANNER_PROVIDER=none
+NEXT_PUBLIC_AD_TEXT_PROVIDER=none
+NEXT_PUBLIC_FOOTER_LINKS=""
