--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -15,7 +15,7 @@ NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
 BLOCK_TRANSFORMER=clique
-NEXT_PUBLIC_NETWORK_RPC_URL=http://172.31.1.103:8545
+NEXT_PUBLIC_NETWORK_RPC_URL=https://testnet-3achain-rpc.noku.io
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=aaa
 NEXT_PUBLIC_RE_CAPTCHA_APP_SITE_KEY=6LcHu9QgAAAAAGQwITxqVtN6B69FlFIng96CNYA6
 NEXT_PUBLIC_AD_BANNER_PROVIDER=none
