--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -10,7 +10,7 @@ NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
 NEXT_PUBLIC_APP_HOST=explorertest.3achain.org
 NEXT_PUBLIC_APP_PROTOCOL=https
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
-#NEXT_PUBLIC_VISUALIZE_API_HOST=https://explorertest.3achain.org:8091
+NEXT_PUBLIC_VISUALIZE_API_HOST=https://explorertest.3achain.org:8091
 NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
