--- a/docker-compose/services/backend-testchain.yml
+++ b/docker-compose/services/backend-testchain.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   backend-testchain:
-    image: blockscout/${DOCKER_REPO:-blockscout}:${DOCKER_TAG:-latest}
+    image: blockscout/${DOCKER_REPO:-blockscout}:${DOCKER_TAG:-6.3.0}
     pull_policy: always
     restart: always
     stop_grace_period: 5m
