--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,8 +1,8 @@
 NEXT_PUBLIC_API_HOST=explorertest.3achain.org
 NEXT_PUBLIC_API_BASE_PATH=/
-NEXT_PUBLIC_NETWORK_LOGO=https://explorer.3achain.org/images/3Achain_Logo-620f8cda3f15530921273c9cc29564a3.svg?vsn=d
-NEXT_PUBLIC_NETWORK_LOGO_DARK=https://explorer.3achain.org/images/3Achain_Logo-620f8cda3f15530921273c9cc29564a3.svg?vsn=d
-NEXT_PUBLIC_NETWORK_ICON=https://explorer.3achain.org/images/3Achain_Logo-620f8cda3f15530921273c9cc29564a3.svg?vsn=d
+NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
+NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
+NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
 NEXT_PUBLIC_NETWORK_NAME=3Achain
 NEXT_PUBLIC_NETWORK_SHORT_NAME=3Achain
 NEXT_PUBLIC_NETWORK_ID=222
