--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -3,6 +3,7 @@ NEXT_PUBLIC_API_BASE_PATH=/
 NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
 NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
 NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
+NEXT_PUBLIC_NETWORK_ICON_DARK=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
 NEXT_PUBLIC_NETWORK_NAME=3Achain
 NEXT_PUBLIC_NETWORK_SHORT_NAME=3Achain
 NEXT_PUBLIC_NETWORK_ID=222
