--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -4,6 +4,7 @@ NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/noku-team/blockscout/
 NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
 NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
 NEXT_PUBLIC_NETWORK_ICON_DARK=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
+NEXT_PUBLIC_OG_IMAGE_URL=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
 NEXT_PUBLIC_NETWORK_NAME=3Achain
 NEXT_PUBLIC_NETWORK_SHORT_NAME=3Achain
 NEXT_PUBLIC_NETWORK_ID=222
@@ -25,3 +26,4 @@ NEXT_PUBLIC_AD_BANNER_PROVIDER=none
 NEXT_PUBLIC_AD_TEXT_PROVIDER=none
 NEXT_PUBLIC_FOOTER_LINKS="https://raw.githubusercontent.com/noku-team/blockscout/testnet/footer.json"
 #NEXT_PUBLIC_STATS_API_HOST=https://explorertest.3achain.org:8090
+NEXT_PUBLIC_IS_TESTNET=true
