--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -5,6 +5,7 @@ NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/noku-team/blocks
 NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
 NEXT_PUBLIC_NETWORK_ICON_DARK=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
 NEXT_PUBLIC_OG_IMAGE_URL=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.png
+FAVICON_MASTER_URL=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.png
 NEXT_PUBLIC_PROMOTE_BLOCKSCOUT_IN_TITLE=false
 NEXT_PUBLIC_NETWORK_NAME=3Achain
 NEXT_PUBLIC_NETWORK_SHORT_NAME=3Achain
