--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -290,7 +290,7 @@ EIP_1559_ELASTICITY_MULTIPLIER=2
 # MIXPANEL_URL=
 # AMPLITUDE_API_KEY=
 # AMPLITUDE_URL=
-IPFS_GATEWAY_URL=https://ipfs.io/ipfs
+IPFS_GATEWAY_URL=https://ipfs.noku.io/ipfs
 # ADDRESSES_TABS_COUNTERS_TTL=10m
 # DENORMALIZATION_MIGRATION_BATCH_SIZE=
 # DENORMALIZATION_MIGRATION_CONCURRENCY=
