--- a/docker-compose/services/backend.yml
+++ b/docker-compose/services/backend.yml
@@ -1,12 +1,12 @@
 version: '3.9'
 
 services:
-  backend-testchain:
+  backend:
     image: blockscout/${DOCKER_REPO:-blockscout}:${DOCKER_TAG:-6.3.0}
     pull_policy: always
     restart: always
     stop_grace_period: 5m
-    container_name: 'backend-testchain'
+    container_name: 'backend'
     command: sh -c "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"
     extra_hosts:
       - 'host.docker.internal:host-gateway'
