--- a/docker-compose/services/nginx.yml
+++ b/docker-compose/services/nginx.yml
@@ -3,14 +3,14 @@ version: '3.9'
 services:
   proxy:
     image: nginx
-    container_name: proxy-testchain
+    container_name: proxy
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     volumes:
       - "../proxy:/etc/nginx/templates"
     environment:
-      BACK_PROXY_PASS: ${BACK_PROXY_PASS:-http://backend-testchain:4000}
-      FRONT_PROXY_PASS: ${FRONT_PROXY_PASS:-http://frontend-testchain:3000}
+      BACK_PROXY_PASS: ${BACK_PROXY_PASS:-http://backend:4000}
+      FRONT_PROXY_PASS: ${FRONT_PROXY_PASS:-http://frontend:3000}
     labels:
       - traefik.enable=true
       - traefik.http.routers.blockscout-3achain-testnet.rule=Host(`explorertest.3achain.org`)
