--- a/docker-compose/services/visualizer.yml
+++ b/docker-compose/services/visualizer.yml
@@ -6,6 +6,6 @@ services:
     pull_policy: always
     platform: linux/amd64
     restart: always
-    container_name: 'visualizer-testchain'
+    container_name: 'visualizer'
     env_file:
       -  ../envs/common-visualizer.env
