--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,30 +1,29 @@
-NEXT_PUBLIC_API_HOST=explorertest.3achain.org
+NEXT_PUBLIC_API_HOST=explorer.3achain.org
 NEXT_PUBLIC_API_BASE_PATH=/
-NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
-NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
-NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
-NEXT_PUBLIC_NETWORK_ICON_DARK=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.svg
-NEXT_PUBLIC_OG_IMAGE_URL=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.png
-FAVICON_MASTER_URL=https://raw.githubusercontent.com/noku-team/blockscout/testnet/blockscout_logo.png
+NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/noku-team/blockscout/mainnet/blockscout_logo.svg
+NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/noku-team/blockscout/mainnet/blockscout_logo.svg
+NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/noku-team/blockscout/mainnet/blockscout_logo.svg
+NEXT_PUBLIC_NETWORK_ICON_DARK=https://raw.githubusercontent.com/noku-team/blockscout/mainnet/blockscout_logo.svg
+NEXT_PUBLIC_OG_IMAGE_URL=https://raw.githubusercontent.com/noku-team/blockscout/mainnet/blockscout_logo.png
+FAVICON_MASTER_URL=https://raw.githubusercontent.com/noku-team/blockscout/mainnet/blockscout_logo.png
 NEXT_PUBLIC_PROMOTE_BLOCKSCOUT_IN_TITLE=false
 NEXT_PUBLIC_NETWORK_NAME=3Achain
 NEXT_PUBLIC_NETWORK_SHORT_NAME=3Achain
-NEXT_PUBLIC_NETWORK_ID=222
+NEXT_PUBLIC_NETWORK_ID=110
 NEXT_PUBLIC_NETWORK_CURRENCY_NAME=LVGA
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=3Acoin
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
-NEXT_PUBLIC_APP_HOST=explorertest.3achain.org
+NEXT_PUBLIC_APP_HOST=explorer.3achain.org
 NEXT_PUBLIC_APP_PROTOCOL=https
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
-NEXT_PUBLIC_VISUALIZE_API_HOST=https://explorertest.3achain.org:8091
+NEXT_PUBLIC_VISUALIZE_API_HOST=https://explorer.3achain.org:8091
 NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
 BLOCK_TRANSFORMER=clique
-NEXT_PUBLIC_NETWORK_RPC_URL=https://testnet-3achain-rpc.noku.io
+NEXT_PUBLIC_NETWORK_RPC_URL=https://3achain-rpc.noku.io
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=aaa
 NEXT_PUBLIC_RE_CAPTCHA_APP_SITE_KEY=6LcHu9QgAAAAAGQwITxqVtN6B69FlFIng96CNYA6
 NEXT_PUBLIC_AD_BANNER_PROVIDER=none
 NEXT_PUBLIC_AD_TEXT_PROVIDER=none
-#NEXT_PUBLIC_STATS_API_HOST=https://explorertest.3achain.org:8090
-NEXT_PUBLIC_IS_TESTNET=true
+#NEXT_PUBLIC_STATS_API_HOST=https://explorer.3achain.org:8090
