--- a/docker-compose/services/nginx.yml
+++ b/docker-compose/services/nginx.yml
@@ -13,7 +13,7 @@ services:
       FRONT_PROXY_PASS: ${FRONT_PROXY_PASS:-http://frontend:3000}
     labels:
       - traefik.enable=true
-      - traefik.http.routers.blockscout-3achain-testnet.rule=Host(`explorertest.3achain.org`)
+      - traefik.http.routers.blockscout-3achain-testnet.rule=Host(`explorer.3achain.org`)
       - traefik.http.routers.blockscout-3achain-testnet.entrypoints=web
       - traefik.http.services.blockscout-3achain-testnet.loadbalancer.server.port=${BLOCKSCOUT_RETRIEVE_PORT}
     ports:
