--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -7,9 +7,9 @@ BLOCKSCOUT_RETRIEVE_PORT=4000
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 # DATABASE_QUEUE_TARGET
-ETHEREUM_JSONRPC_HTTP_URL=https://testnet-3achain-rpc.noku.io
+ETHEREUM_JSONRPC_HTTP_URL=https://3achain-rpc.noku.io
 ETHEREUM_JSONRPC_WS_URL=ws://172.31.1.103:8546
-ETHEREUM_JSONRPC_TRACE_URL=https://testnet-3achain-rpc.noku.io
+ETHEREUM_JSONRPC_TRACE_URL=https://3achain-rpc.noku.io
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_FALLBACK_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
@@ -27,7 +27,7 @@ ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
 # ETHEREUM_JSONRPC_GETH_TRACE_BY_BLOCK=
 IPC_PATH=
 NETWORK_PATH=/
-BLOCKSCOUT_HOST=explorertest.3achain.org
+BLOCKSCOUT_HOST=explorer.3achain.org
 BLOCKSCOUT_PROTOCOL=https
 
 # CHECK_ORIGIN=
@@ -245,7 +245,7 @@ EXTERNAL_APPS=[]
 # RESTRICTED_LIST_KEY=
 SHOW_MAINTENANCE_ALERT=false
 MAINTENANCE_ALERT_MESSAGE=
-CHAIN_ID=
+CHAIN_ID=110
 MAX_SIZE_UNLESS_HIDE_ARRAY=50
 HIDE_BLOCK_MINER=false
 DISPLAY_TOKEN_ICONS=false
@@ -254,15 +254,15 @@ JSON_RPC=
 # API_RATE_LIMIT_IS_BLOCKSCOUT_BEHIND_PROXY=false
 API_RATE_LIMIT_UI_V2_TOKEN_TTL_IN_SECONDS=18000
 FETCH_REWARDS_WAY=manual
-MICROSERVICE_SC_VERIFIER_URL=http://smart-contract-verifier-testchain:8050/
+MICROSERVICE_SC_VERIFIER_URL=http://smart-contract-verifier:8050/
 #MICROSERVICE_SC_VERIFIER_TYPE=sc_verifier
 MICROSERVICE_SC_VERIFIER_TYPE=eth_bytecode_db
 MICROSERVICE_ETH_BYTECODE_DB_INTERVAL_BETWEEN_LOOKUPS=10m
 MICROSERVICE_ETH_BYTECODE_DB_MAX_LOOKUPS_CONCURRENCY=10
 MICROSERVICE_VISUALIZE_SOL2UML_ENABLED=false
-MICROSERVICE_VISUALIZE_SOL2UML_URL=http://visualizer-testchain:8050/
+MICROSERVICE_VISUALIZE_SOL2UML_URL=http://visualizer:8050/
 MICROSERVICE_SIG_PROVIDER_ENABLED=true
-MICROSERVICE_SIG_PROVIDER_URL=http://sig-provider-testchain:8050/
+MICROSERVICE_SIG_PROVIDER_URL=http://sig-provider:8050/
 
 # MICROSERVICE_BENS_URL=
 # MICROSERVICE_BENS_ENABLED=
