--- a/docker-compose/proxy/default.conf.template
+++ b/docker-compose/proxy/default.conf.template
@@ -6,7 +6,7 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen       80;
-    server_name  explorertest.3achain.org;
+    server_name  explorer.3achain.org;
     proxy_http_version 1.1;
 
     location ~ ^/(api|socket|sitemap.xml|auth/auth0|auth/auth0/callback|auth/logout) {
