--- a/docker-compose/services/frontend.yml
+++ b/docker-compose/services/frontend.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   frontend:
-    image: ghcr.io/noku-team/blockscout-frontend
+    image: ghcr.io/noku-team/blockscout-frontend:main
     pull_policy: always
     platform: linux/amd64
     restart: always
