--- a/docker/Makefile
+++ b/docker/Makefile
@@ -17,17 +17,17 @@ STABLE_TAG := $(RELEASE_VERSION)
 
 start:
 	@echo "==> Starting smart contract verifier"
-	@docker-compose -f ../docker-compose/services/smart-contract-verifier.yml up -d
+	@docker-compose -f ../docker-compose/services/smart-contract-verifier.yml up -d  -p mainnet
 	@echo "==> Starting blockscout db"
-	@docker-compose -f ../docker-compose/services/db.yml up -d 
+	@docker-compose -f ../docker-compose/services/db.yml up -d -p mainnet
 	@echo "==> Starting blockscout backend"
-	@docker-compose -f ../docker-compose/services/backend.yml up -d
+	@docker-compose -f ../docker-compose/services/backend.yml up -d -p mainnet
 	@echo "==> Starting visualizer microservice"
-	@docker-compose -f ../docker-compose/services/sig-provider.yml up -d 
+	@docker-compose -f ../docker-compose/services/sig-provider.yml up -d -p mainnet
 	@echo "==> Starting blockscout frontend"
-	@docker-compose -f ../docker-compose/services/frontend.yml up -d
+	@docker-compose -f ../docker-compose/services/frontend.yml up -d -p mainnet
 	@echo "==> Starting Nginx proxy"
-	@docker-compose -f ../docker-compose/services/nginx.yml up -d
+	@docker-compose -f ../docker-compose/services/nginx.yml up -d -p mainnet
 
 BS_BACKEND_STARTED := $(shell docker ps --no-trunc --filter name=^/${BACKEND_CONTAINER_NAME}$  | grep ${BACKEND_CONTAINER_NAME})
 BS_FRONTEND_STARTED := $(shell docker ps --no-trunc --filter name=^/${FRONTEND_CONTAINER_NAME}$  | grep ${FRONTEND_CONTAINER_NAME})
