--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -26,3 +26,5 @@ NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=aaa
 NEXT_PUBLIC_RE_CAPTCHA_APP_SITE_KEY=6LcHu9QgAAAAAGQwITxqVtN6B69FlFIng96CNYA6
 NEXT_PUBLIC_AD_BANNER_PROVIDER=none
 NEXT_PUBLIC_AD_TEXT_PROVIDER=none
+#NEXT_PUBLIC_STATS_API_HOST=https://explorer.3achain.org:8090
+NEXT_PUBLIC_IS_TESTNET=false
