--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -6,9 +6,9 @@ BLOCKSCOUT_RETRIEVE_PORT=4000
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 # DATABASE_QUEUE_TARGET
-ETHEREUM_JSONRPC_HTTP_URL=https://3achain-rpc.noku.io
+ETHEREUM_JSONRPC_HTTP_URL=http://172.31.2.5:8545
 ETHEREUM_JSONRPC_WS_URL=ws://172.31.2.5:8546
-ETHEREUM_JSONRPC_TRACE_URL=https://3achain-rpc.noku.io
+ETHEREUM_JSONRPC_TRACE_URL=http://172.31.2.5:8545
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_FALLBACK_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
